--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
             display: none;
             background: none;
             border: none;
-            color: white;
+            color: #2c3e50;
             font-size: 1.5em;
             cursor: pointer;
+        }
+
+        .navbar-toggler span {
+            color: #2c3e50; /* Ensuring the hamburger icon is in the darker color */
         }
 
         .navbar-links {
