--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             padding: 1em 0;
         }
 
+        #main-heading {
+            padding-top: 80px; /* Ensure there is space at the top */
+        }
+
         #navbar ul {
             display: flex;
             justify-content: center;
