--- a/index.html
+++ b/index.html
@@ -71,19 +71,23 @@
 
         /* Toggler button (Initial) */
         .navbar-toggler {
-            display: none;
-            background: #3a4c7f; /* Darker blue for the toggler */
+            display: block;
+            background: #2c3e50; /* Darker shade */
             border: none;
-            padding: 10px;
+            color: #fff;
+            font-size: 1.8em;
             cursor: pointer;
+            padding: 0.5em;
+            width: 40px;
+            height: 40px;
         }
 
         .navbar-toggler span {
-            background-color: white;
-            height: 3px;
+            display: block;
             width: 30px;
-            margin: 5px 0;
-            transition: all 0.3s ease;
+            height: 4px;
+            background-color: #fff; /* White color for lines */
+            margin: 6px 0; /* Spacing between the lines */
         }
 
         /* Navbar Links */
@@ -143,7 +147,9 @@
 
             <!-- Hamburger Icon -->
             <button class="navbar-toggler" id="navbar-toggler" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon">&#9776;</span> <!-- Hamburger icon symbol -->
+                <span></span>
+                <span></span>
+                <span></span>
             </button>
 
             <!-- Navbar Links -->
