--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 0 2em;
         }
 
 
@@ -107,6 +108,8 @@
         .navbar-links {
             display: flex;
             gap: 20px;
+            flex-grow: 1;
+            justify-content: center;
         }
 
         /* Media Query for Mobile */
